--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,11 +14,11 @@ android {
     }
 
     defaultConfig {
-        applicationId "com.cooper.wheellog"
+        applicationId "com.cooper.wheellog_mode"
         minSdkVersion 18
         targetSdkVersion 28
-        versionCode 64
-        versionName "2.0.44b.f6"
+        versionCode 66
+        versionName "2.0.47.f14"
         buildConfigField 'String', 'BUILD_TIME', 'new java.text.SimpleDateFormat("HH:mm dd.MM.yyyy", java.util.Locale.US).format(new java.util.Date(' + System.currentTimeMillis() +'L))'
         vectorDrawables.useSupportLibrary = true
     }
